--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -24,14 +24,8 @@
                             </div>
 
                             <div class="mb-3">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="patrocinador" 
-                                           name="isPatrocinador" 
-                                           th:checked="${pessoa.patrocinador == 1}">
-                                    <label class="form-check-label" for="patrocinador">
-                                        É apoiador?
-                                    </label>
-                                </div>
+                                <label for="igreja" class="form-label">Igreja</label>
+                                <input type="text" class="form-control" id="igreja" th:field="*{igreja}">
                             </div>
 
                             <div class="mb-3">
