feat: ajuste para editar

--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -30,10 +30,10 @@
 
                             <div class="mb-3">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="pagou" 
+                                    <input class="form-check-input" type="checkbox" id="isPagou" 
                                            name="isPagou" 
                                            th:checked="${pessoa.pagou == 1}">
-                                    <label class="form-check-label" for="pagou">
+                                    <label class="form-check-label" for="isPagou">
                                         Já pagou?
                                     </label>
                                 </div>
